--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "lib/printf"]
 	path = lib/printf
 	url = https://github.com/qmk/printf
+[submodule "keyboards/ergodox_ez/keymaps/myergo"]
+	path = keyboards/ergodox_ez/keymaps/myergo
+	url = https://github.com/molleweide/my_ergo_keymap
